@@ -1,0 +1,13 @@
+False
+
+False
+True
+True
+
+False
+False
+True
+
+27
+14
+10
